--- a/KSService/EditWindow.xaml
+++ b/KSService/EditWindow.xaml
@@ -1,8 +1,208 @@
 ﻿<Window x:Class="KSService.EditWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="EditWindow" Height="300" Width="300" Closed="OnWindowsClosed">
+        Title="EditWindow" Height="530" Width="800" Closed="OnWindowsClosed" ResizeMode="NoResize">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="290"/>
+            <RowDefinition Height="200"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <Grid Width="400" Height="225">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="0" Background="#555555">
+                    <TextBlock Grid.Row="0" VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                </Grid>
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0" Background="#666666">
+                        <TextBlock VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                    </Grid>
+                    <Grid Grid.Row="1" Background="#777777">
+                        <TextBlock VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                    </Grid>
+                </Grid>
+            </Grid>
+            <Grid Width="400" Height="225">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="0" Background="#555555">
+                    <TextBlock Grid.Row="0" VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                </Grid>
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0" Background="#666666">
+                        <TextBlock VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                    </Grid>
+                    <Grid Grid.Row="1" Background="#777777">
+                        <TextBlock VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                    </Grid>
+                    <Grid Grid.Row="2" Background="#888888">
+                        <TextBlock VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                    </Grid>
+                </Grid>
+            </Grid>
+            <Grid Width="400" Height="225" Background="#555555">
+                <TextBlock FontSize="20" 
+                                   Text="圖片、影片"
+                                   TextAlignment="Center"
+                                   VerticalAlignment="Center"
+                                   Foreground="white"
+                                   Background="#555555"/>
+                <TextBlock VerticalAlignment="Bottom" 
+                                   FontSize="10" 
+                                   Text="文字跑馬燈~文字跑馬燈~文字跑馬燈~" 
+                                   Foreground="Pink"
+                                   Padding="5"
+                                   Background="#333333"/>
+            </Grid>
+            <Grid Width="400" Height="225" Background="#555555">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition Height="23"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0" Background="#555555">
+                        <TextBlock Grid.Row="0" VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="0" Background="#666666">
+                            <TextBlock VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                        </Grid>
+                        <Grid Grid.Row="1" Background="#777777">
+                            <TextBlock VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                        </Grid>
+                    </Grid>
+                </Grid>
+                <TextBlock Grid.Row="1" VerticalAlignment="Bottom" 
+                                   FontSize="10" 
+                                   Text="文字跑馬燈~文字跑馬燈~文字跑馬燈~" 
+                                   Foreground="Pink"
+                                   Padding="5"
+                                   Background="#333333"/>
+            </Grid>
+            <Grid Width="400" Height="225" Background="#555555">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition Height="23"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0" Background="#555555">
+                        <TextBlock Grid.Row="0" VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="2*"/>
+                            <RowDefinition Height="1*"/>
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="0" Background="#666666">
+                            <TextBlock VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                        </Grid>
+                        <Grid Grid.Row="1" Background="#777777">
+                            <TextBlock VerticalAlignment="Center" 
+                                           TextAlignment="Center"
+                                           FontSize="20" 
+                                           Text="圖片、影片" 
+                                           Foreground="white"
+                                           Padding="5"/>
+                        </Grid>
+                    </Grid>
+                </Grid>
+                <Button Grid.Row="1" VerticalAlignment="Bottom" 
+                        FontSize="10" 
+                        Content="文字跑馬燈~文字跑馬燈~文字跑馬燈~" 
+                        HorizontalContentAlignment="Left"
+                        Foreground="Pink"
+                        Padding="5"
+                        Background="#333333"/>
+            </Grid>
+        </Grid>
+        <Grid Grid.Row="1">
+            
+        </Grid>
     </Grid>
 </Window>
