--- a/KSService/MainWindow.xaml
+++ b/KSService/MainWindow.xaml
@@ -1,19 +1,24 @@
 ﻿<Window x:Class="KSService.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="KSService" Height="650" Width="900" Background="White" ResizeMode="NoResize">
+        Title="KSService" Height="630" Width="900" Background="White" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="560"/>
+            <RowDefinition Height="90"/>
+            <RowDefinition Height="500"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center">
-            <TextBlock FontSize="14">　選擇版型建立新檔案，或</TextBlock>
-            <Button Margin="10,0,0,0">
-                <TextBlock>　　開啟 KSService 專案檔　　</TextBlock>
-            </Button>
-            <TextBlock FontSize="14">　進行修改</TextBlock>
-        </StackPanel>
+        <Grid Grid.Row="0">
+            <StackPanel Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center">
+                <TextBlock FontSize="14">　選擇版型建立新檔案，或</TextBlock>
+                <Button Margin="10,0,0,0">
+                    <TextBlock>　　開啟 KSService 專案檔　　</TextBlock>
+                </Button>
+                <TextBlock FontSize="14">　進行修改</TextBlock>
+            </StackPanel>
+            <TextBlock x:Name="ksmessage" Margin="10" 
+                       TextAlignment="Right" VerticalAlignment="Center"
+                       HorizontalAlignment="Right"/>
+        </Grid>
         <TabControl Grid.Row="1">
             <TabItem Header="橫向螢幕">
                 <ListView PreviewMouseDoubleClick="OnLandscapeItemSelected">
